--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "publishConfig": {
     "access": "public"
   },
-  "homepage": "",
+  "homepage": "https://github.com/PishangShedappp/universe-setup/",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/PishangShedappp/universe-setup.git"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
