--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,8 +1,9 @@
 name: Npm Publish
 
 on:
-  release:
-    types: [published]
+  push:
+    branches:
+      - main # Or your main development branch (e.g., master, develop)
 
 jobs:
   build:
